tests/checker/good/TestLibNS4.scillib
(* importing two disjoint libraries into the same namespace is fine *)
import TestLibNS2 >> Foo
       BoolUtils  >> Foo

library TestLibNS4

let negb = Foo.negb

let foo = Foo.foo
